gcc/testsuite/g++.dg/template/static36.C
// PR c++/65646

template <typename = int> class A {};
template <> A<> &A<>::a;	// { dg-error "" }
